--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h1> iPhone X </h1>
     <p> The best smartphone in the wolrd is comming. </p>
 </div>
+<h2> le smartphone avec le plus gros capteur d'empreinte digitale </h2>
+
+
+
+
 
   </body>
 </html>
