--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <div class="text">
     <h1> iPhone X </h1>
     <p> The best smartphone in the wolrd is comming. </p>
+    <p>Just 1000$ for this technology</p>
 </div>
 <h2> le smartphone avec le plus gros capteur d'empreinte digitale </h2>
 
-
+ <h1> Ipod Nano</h1>
+   <p>ecoute de la musique non-stop</p>
 
 
 
