--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1> iPhone X </h1>
     <p> The best smartphone in the wolrd is comming. </p>
     <p>Just 1000$ for this technology</p>
+    <p>super super cool</p>
+    <p>meilleur portable du monde</p>
 </div>
 <h2> le smartphone avec le plus gros capteur d'empreinte digitale </h2>
 
