--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <div class="text">
     <h1> iPhone X </h1>
+      <h2>  frandroid super youw</h2>
     <p> The best smartphone in the wolrd is comming. </p>
     <p>Just 1000$ for this technology</p>
 </div>
