--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="text">
     <h1> iPhone X </h1>
       <h2>  frandroid super youw</h2>
-    <p> The best smartphone in the wolrd is comming. </p>
+    <p> The best toto in the wolrd is comming. </p>
     <p>Just 1000$ for this technology</p>
     <p>super super cool</p>
     <p>meilleur portable du monde</p>
