--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="text">
     <h1> iPhone X </h1>
-    <p> The best smartphone in the wolrd is comming. </p>
+    <p> The best tata in the wolrd is comming. </p>
     <p>Just 1000$ for this technology</p>
     <p>super super cool</p>
     <p>meilleur portable du monde</p>
